utilisation de define pour faire plusieurs instance d'une super-classe

--- a/puppet/production/modules/apache/templates/vhost.conf.erb
+++ b/puppet/production/modules/apache/templates/vhost.conf.erb
@@ -1,6 +1,6 @@
 <%# ceci est un commentaire %>
 
 <VirtualHost *:80>
-  DocumentRoot "<%= @www_dir_prefix %>/<%= @apache_hostname %>"
+  DocumentRoot "<%= @vhost_htmldir %>"
   ServerName <%= @apache_hostname %>
 </VirtualHost>
