--- a/puppet/production/modules/apache/templates/index.default.vhost.erb
+++ b/puppet/production/modules/apache/templates/index.default.vhost.erb
@@ -1,12 +1,12 @@
 <html>
 <head/>
 <body>
-  <h1>Walcome to <%= @apache_hostname %> !!!!</h1>
+  <h1>Welcome to <%= @apache_hostname %> !!!!</h1>
   <div>
-  <img src="nm.png"/>
+  <img src="nm.png" width="200px"/>
   </div>
   <div>
-  <img src="puppet.svg"/>
+  <img src="puppet.svg" width="200px"/>
   </div>
 </body>
 </html>
