--- a/puppet/production/modules/apache/templates/vhost.conf.erb
+++ b/puppet/production/modules/apache/templates/vhost.conf.erb
@@ -1,6 +1,11 @@
 <%# ceci est un commentaire %>
 
 <VirtualHost *:80>
-  DocumentRoot "<%= @vhost_htmldir %>"
   ServerName <%= @apache_hostname %>
+  DocumentRoot "<%= @vhost_htmldir %>"
+  <Directory "<%= @vhost_htmldir %>">
+    Order allow,deny
+    Allow from all
+    Require all granted
+  </Directory>
 </VirtualHost>
